<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".view.LoginScreen">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_20dp"
        android:src="@drawable/back_btn" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_60dp"
        android:background="@drawable/log_icon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:orientation="vertical">

        <com.app.traphoria.customViews.MyEditTextView
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_blue_button_selector"
            android:gravity="center"
            android:hint="@string/email_add"
            android:inputType="textEmailAddress"
            android:padding="@dimen/round_btn_padding"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_18sp" />


        <com.app.traphoria.customViews.MyEditTextView
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/dark_blue_button_selector"
            android:gravity="center"
            android:hint="@string/pwd"
            android:inputType="textPassword"
            android:padding="@dimen/round_btn_padding"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size_18sp" />

        <com.app.traphoria.customViews.MyButtonViewSemi
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/purple_button_selector"
            android:text="@string/login"
            android:textColor="@color/white" />

        <com.app.traphoria.customViews.MyButtonViewSemi
            android:id="@+id/btn_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:background="@drawable/purple_button_selector"
            android:text="@string/forget_password"
            android:textColor="@color/white" />

        <com.app.traphoria.customViews.MyTextView
            android:id="@+id/txt_terms_btn"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/terms"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>
