<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/members_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_ll" />

    <RelativeLayout
        android:id="@+id/no_trip_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/no_trip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/no_record_found"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/add_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_trip_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20dp"
            android:padding="@dimen/margin_20dp"
            android:src="@drawable/croos_circle_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_member"
            android:layout_centerHorizontal="true"
            android:text="@string/add_member"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="normal" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple"
        android:paddingBottom="@dimen/margin_10dp"
        android:paddingTop="@dimen/margin_10dp"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/track"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/task"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/track_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/track_icon" />

        <ImageView
            android:id="@+id/task_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/task_icon" />

        <ImageView
            android:id="@+id/message_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/message_icon" />
    </LinearLayout>
</RelativeLayout>