<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".task.AddNewTaskScreen">


    <LinearLayout
        android:id="@+id/toolbar_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_ll"
        android:layout_below="@+id/toolbar_ll"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:orientation="vertical">

        <com.app.traphoria.customViews.MyTextView16
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:text="@string/task_title"
            android:textColor="@color/black" />

        <com.app.traphoria.customViews.MyEditTextView
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:hint="@string/write_here"
            android:maxLines="2"
            android:padding="@dimen/margin_20dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/dark_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.app.traphoria.customViews.MyTextView16
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:text="@string/task_description"
                android:textColor="@color/black" />

            <com.app.traphoria.customViews.MyTextView16
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingTop="@dimen/margin_10dp"
                android:text="0/150"
                android:textColor="@color/dark_grey" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/grey_background">

            <com.app.traphoria.customViews.MyEditTextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/write_here"
                android:maxLength="150"
                android:padding="@dimen/margin_10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/dark_grey" />
        </RelativeLayout>

        <com.app.traphoria.customViews.MyTextView16
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_10dp"
            android:paddingTop="@dimen/margin_10dp"
            android:text="@string/share_task"
            android:textColor="@color/black" />

        <ListView
            android:id="@+id/members_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />
    </LinearLayout>


    <com.app.traphoria.customViews.MyButtonViewSemi
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/purple"
        android:text="@string/save"
        android:textColor="@color/white" />

</RelativeLayout>
